clean up boiler plate code

--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "postinstall": "react-native-inhibit-warnings"
   },
   "dependencies": {
+    "phoenix": "^1.4.11",
     "react": "16.9.0",
     "react-native": "0.61.5"
   },
@@ -21,6 +18,7 @@
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "react-native-inhibit-warnings": "^1.0.1",
     "react-test-renderer": "16.9.0"
   },
   "jest": {
