--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@babel/runtime": "^7.7.7",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-preset-mobx": "^2.0.0",
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.57.0",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "react-native-inhibit-warnings": "^1.0.1",
     "react-test-renderer": "16.9.0"
   },
